--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,7 +1,7 @@
 FROM balenalib/%%BALENA_MACHINE_NAME%%-debian-python:3.7.3-stretch-run
 
-RUN apt-get update && apt-get install -yq --no-install-recommends \
-    python3-dev python3-venv
+#RUN apt-get update && apt-get install -yq --no-install-recommends \
+#   python3-dev python3-venv
 
 # Enable init system
 # ENV INITSYSTEM on
