--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,7 +1,19 @@
 FROM balenalib/%%BALENA_MACHINE_NAME%%-debian-python:3.5.7-stretch-build
 
-#RUN apt-get update && apt-get install -yq --no-install-recommends \
-#   python3-dev python3-venv
+RUN apt-get update && apt-get install -yq --no-install-recommends \
+  portaudio19-dev \
+  libffi-dev \
+  libssl-dev \
+  libmpg123-dev \
+  alsa-utils \
+  && \
+  apt-get clean && rm -rf /var/lib/apt/lists/*
+
+RUN python3 -m venv env
+RUN env/bin/python -m pip install --upgrade pip setuptools wheel
+RUN source env/bin/activate && \
+    python -m pip install --upgrade google-assistant-library==1.0.1  && \
+    python -m pip install --upgrade google-assistant-sdk[samples]==0.5.1
 
 # Enable init system
 # ENV INITSYSTEM on
