--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -11,8 +11,9 @@ RUN apt-get update && apt-get install -yq --no-install-recommends \
 
 RUN python3 -m venv /env
 RUN /env/bin/python -m pip install --upgrade pip setuptools wheel
-RUN source /env/bin/activate && \
-    python -m pip install --upgrade google-assistant-library==1.0.1  && \
+RUN . /env/bin/activate && \
+    python -m pip install --upgrade google-assistant-library==1.0.1 
+RUN . /env/bin/activate && \
     python -m pip install --upgrade google-assistant-sdk[samples]==0.5.1
 
 # Enable init system
