--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -20,6 +20,7 @@ RUN . /env/bin/activate && \
 # ENV INITSYSTEM on
 
 ADD start.sh /start.sh
+ADD create_credentials.sh /create_credentials.sh
 
 # Start app
 CMD ["bash", "/start.sh"]
