--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,6 @@ services:
     privileged: true
   pulseaudio:
     image: woahbase/alpine-pulseaudio:armhf
-    restart: always
+    #restart: always
     network_mode: host
     privileged: true
