--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,9 @@ services:
   pulseaudio:
     image: woahbase/alpine-pulseaudio:armhf
     #restart: always
-    network_mode: host
+    #network_mode: host
     #privileged: true
     labels:
       io.balena.features.dbus: '1'
-      
+      io.balena.features.kernel-modules: '1'
+
